fixed the spacing issue in quotation page

--- a/Frontend/Css/quotationPrintPage.css
+++ b/Frontend/Css/quotationPrintPage.css
@@ -63,7 +63,11 @@ li {
   font-size: 10pt;
 }
 
-
+.page1{
+   margin: 0;
+  padding: 0;
+  border: 1px solid;
+}
 
 
 
